# raytracer

Raytracer/: CMakeLists.txt  Camera.cpp  Camera.h  Environment.cpp  Environment.h  HitInfo.cpp  HitInfo.h  Intersection.cpp  Intersection.h  LightSource.cpp  LightSource.hpp  Pixel.cpp  Pixel.h  RTColor.cpp  RTColor.h  RTPoint.cpp  RTPoint.h  RTSize.cpp  RTSize.h  RTTexture.h  Ray.cpp  Ray.h  Resolution.cpp  Resolution.h  Screen.cpp  Screen.h  Transformation.cpp  Transformation.h  Vector.cpp  Vector.h  main 2.cpp  main.cpp
Raytracer.xcodeproj/: project.pbxproj
Raytracer.xcodeproj/project.xcworkspace/xcuserdata/jannesvangoeye.xcuserdatad/: UserInterfaceState.xcuserstate
Raytracer.xcodeproj/xcshareddata/xcschemes/: Raytracer.xcscheme
Raytracer.xcodeproj/xcuserdata/jannesvangoeye.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Raytracer.xcodeproj/xcuserdata/jannesvangoeye.xcuserdatad/xcschemes/: xcschememanagement.plist
Raytracer/Objects/: Object.cpp  Object.h  Sphere.cpp  Sphere.h  Square.cpp  Square.hpp  Vlak.cpp  Vlak.h
